Audio alignment fix

--- a/src/stylesheets/includes/_not-sorted-scss.scss
+++ b/src/stylesheets/includes/_not-sorted-scss.scss
@@ -1626,6 +1626,7 @@
 .library-audio-player {
   margin-inline-start: 0;
   margin-inline-end: 20px;
+  text-align: end;
   cursor: pointer;
 
   a {
